[package]
name = "optimistic_lock_coupling"
version = "0.2.5"
authors = ["lemonhx <lemonhx@lemonhx.tech>"]
edition = "2018"
description = "A General Lock following paper 'Optimistic Lock Coupling: A Scalable and Efficient General-Purpose Synchronization Method' "
license = "Unlicense"

[[bench]]
name = "benchmark"
harness = false
path = "benches/benchmark.rs"

[dev-dependencies]
criterion = "0.3"

[dependencies]
